# burn-mnist

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/inference/: image.rs  inference.rs  mod.rs  state.rs  ui.rs
src/training/: data.rs  mod.rs  model.rs  run.rs  training.rs
